# fruit-classifier-aws

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: bootstrap-emr.sh
src/fruit_classifier/: __init__.py  config.py  features.py  io.py  pipeline.py  reduction.py
tests/: test_config.py  test_features.py  test_io.py
