[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fruit-classifier"
version = "0.1.0"
description = "Distributed fruit image classification pipeline using MobileNetV2 on AWS EMR"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3",
    "pillow>=8.0",
    "numpy>=1.21",
    "tensorflow>=2.8",
    "pyspark>=3.2",
    "pyarrow>=6.0",
    "boto3>=1.20",
    "s3fs>=2022.1",
    "fsspec>=2022.1",
    "matplotlib>=3.4",
]

[project.scripts]
fruit-classifier = "fruit_classifier.pipeline:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.6",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "spark: tests that require a live Spark session",
    "aws: tests that require AWS credentials",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
